--- a/okteto.yaml
+++ b/okteto.yaml
@@ -6,7 +6,7 @@ build:
 deploy:
   - kubectl apply -f k8s --recursive
 dev:
-  design-system-pipeline:
+  storybook:
     command: yarn storybook
     sync:
       - ./src:/src
